tests/NormalTests/paczka1/fuzzy1/66163990.err
Error in line 9: SvoW7DMvEV A344 37,4
Error in line 10: SvoW7DMvEV S271 9,1
Error in line 5: rEgAGS S271 90,6
Error in line 16: rEgAGS A344 8,6
Error in line 24: ZJR A344 -1,8
Error in line 29: p8we S359 13,77
Error in line 27: A344 A344 85,9
Error in line 25: SvoW7DMvEV S359 135,0
Error in line 39: rEgAGS S359 84,7
